--- a/app/src/main/res/layout/wifi_activity.xml
+++ b/app/src/main/res/layout/wifi_activity.xml
@@ -32,10 +32,10 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/buttonScan"
+            android:id="@+id/buttonFlush"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
-            android:text="Scan" />
+            android:text="Flush" />
 
         <Button
             android:id="@+id/buttonEnable"
