--- a/app/src/main/res/layout/wifi_activity.xml
+++ b/app/src/main/res/layout/wifi_activity.xml
@@ -10,14 +10,14 @@
         android:id="@+id/imageWifiState"
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
-        android:layout_toStartOf="@+id/buttonBack"
         android:src="@drawable/ic_signal_wifi_off_bar_black_48dp" />
 
     <ListView
-        android:id="@+id/list"
+        android:id="@+id/listWifi"
         android:layout_width="match_parent"
-        android:layout_height="231dp"
+        android:layout_height="match_parent"
         android:layout_below="@+id/bar"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true" />
@@ -54,13 +54,13 @@
 
     </LinearLayout>
 
-    <Button
+    <ImageView
         android:id="@+id/buttonBack"
-        android:layout_width="wrap_content"
+        android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:text="Back" />
+        android:src="@drawable/ic_keyboard_backspace_black_24dp" />
 
     <TextView
         android:id="@+id/date"
