--- a/app/src/main/res/layout/wifi_option.xml
+++ b/app/src/main/res/layout/wifi_option.xml
@@ -20,7 +20,7 @@
         android:text="TextView" />
 
     <TextView
-        android:id="@+id/txtNetID"
+        android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/txtBSSID"
@@ -32,18 +32,18 @@
         android:id="@+id/buttonBack"
         android:layout_width="100dp"
         android:layout_height="40dp"
-        android:layout_below="@+id/txtNetID"
+        android:layout_below="@+id/name"
         android:layout_marginEnd="-100dp"
-        android:layout_toStartOf="@id/txtNetID"
+        android:layout_toStartOf="@id/name"
         android:text="Back" />
 
     <Button
         android:id="@+id/buttonForget"
         android:layout_width="100dp"
         android:layout_height="40dp"
-        android:layout_below="@+id/txtNetID"
+        android:layout_below="@+id/name"
         android:layout_marginStart="-100dp"
-        android:layout_toEndOf="@id/txtNetID"
+        android:layout_toEndOf="@id/name"
         android:text="Forget" />
 
     <Button
