--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,32 +4,61 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:layout_margin="16dp">
 
-    <ImageView
-        android:id="@+id/imageWifiState"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
-        android:src="@drawable/ic_signal_wifi_off_bar_black_48dp" />
-
+    <!--<RelativeLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent">-->
+        <!--<VideoView-->
+            <!--android:layout_alignParentTop="true"-->
+            <!--android:layout_alignParentBottom="true"-->
+            <!--android:layout_alignParentLeft="true"-->
+            <!--android:layout_alignParentRight="true"-->
+            <!--android:layout_width="fill_parent"-->
+            <!--android:layout_height="fill_parent"-->
+            <!--android:visibility="gone"-->
+            <!--android:id="@+id/myVideoView"/>-->
+    <!--</RelativeLayout>-->
     <TextView
-        android:id="@+id/date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        android:layout_centerInParent="true"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:text="Date" />
-
-    <TextView
         android:id="@+id/time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/date"
-        android:layout_centerHorizontal="true"
         android:text="Time" />
+    <TextView
+        android:id="@+id/date"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        android:layout_below="@+id/time"
+        android:layout_centerInParent="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Date"/>
 
+    <TextView
+        android:id="@+id/wifi_status"
+        android:layout_width="100dp"
+        android:layout_height="22dp"
+        android:layout_toLeftOf="@id/imageWifiState"
+        android:text="IP Address is: " />
+
+    <TextView
+        android:id="@+id/ip_address"
+        android:layout_width="100dp"
+        android:layout_height="25dp"
+        android:layout_below="@id/wifi_status"
+        android:layout_toLeftOf="@id/imageWifiState"
+        android:text="" />
+    <ImageButton
+        android:id="@+id/imageWifiState"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentRight="true"
+        android:src="@drawable/ic_signal_wifi_off_bar_black_48dp"/>
     <!--   <Button
          android:id="@+id/buttonSetting"
          android:layout_width="wrap_content"
@@ -63,63 +92,7 @@
         android:orientation="horizontal">
 
         <android.support.v7.widget.CardView
-            android:id="@+id/home_card"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_margin="5dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:layout_width="64dp"
-                    android:layout_height="64dp"
-                    android:background="@drawable/circlebackgroundpurple"
-                    android:padding="5dp"
-                    android:src="@drawable/ic_home_black_24dp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="1dp"
-                    android:text="Home"
-                    android:textStyle="bold" />
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.CardView
-            android:id="@+id/file_card"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_margin="5dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:layout_width="64dp"
-                    android:layout_height="64dp"
-                    android:background="@drawable/circlebackgroundyello"
-                    android:padding="5dp"
-                    android:src="@drawable/ic_folder_black_24dp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="1dp"
-                    android:text="File"
-                    android:textStyle="bold" />
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.CardView
-            android:id="@+id/livetv_card"
+            android:id="@+id/number_card"
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:layout_margin="5dp">
@@ -135,19 +108,47 @@
                     android:layout_height="64dp"
                     android:background="@drawable/circlebackgroundgreen"
                     android:padding="5dp"
-                    android:src="@drawable/ic_live_tv_black_24dp" />
+                    android:src="@drawable/ic_number" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="1dp"
-                    android:text="Live TV"
+                    android:text="Number"
                     android:textStyle="bold" />
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
-            android:id="@+id/app_card"
+            android:id="@+id/qr_card"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_margin="5dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="64dp"
+                    android:layout_height="64dp"
+                    android:background="@drawable/circlebackgroundyello"
+                    android:padding="5dp"
+                    android:src="@drawable/ic_qr" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="1dp"
+                    android:text="QR"
+                    android:textStyle="bold" />
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/rfid_card"
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:layout_margin="5dp">
@@ -163,19 +164,19 @@
                     android:layout_height="64dp"
                     android:background="@drawable/circlebackgroundpink"
                     android:padding="5dp"
-                    android:src="@drawable/ic_apps_black_24dp" />
+                    android:src="@drawable/ic_rfid" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="1dp"
-                    android:text="Apps"
+                    android:text="RFID"
                     android:textStyle="bold" />
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
-            android:id="@+id/setting_card"
+            android:id="@+id/face_card"
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:layout_margin="5dp">
@@ -191,15 +192,24 @@
                     android:layout_height="64dp"
                     android:background="@drawable/circlebackgroundgray"
                     android:padding="5dp"
-                    android:src="@drawable/ic_settings_black_24dp" />
+                    android:src="@drawable/ic_face" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="1dp"
-                    android:text="Settings"
+                    android:text="Face"
                     android:textStyle="bold" />
             </LinearLayout>
         </android.support.v7.widget.CardView>
     </LinearLayout>
+
+    <Button
+        android:id="@+id/buttonExit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:text="Button" />
+
 </RelativeLayout>
